[gd_scene load_steps=33 format=2]

[ext_resource path="res://free-assets/fonts/Balsamiq/BalsamiqSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://free-assets/fonts/Balsamiq/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/LanguageSelect.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 38
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="DynamicFont" id=23]
size = 40
outline_size = 3
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="DynamicFont" id=29]
size = 58
use_filter = true
font_data = ExtResource( 2 )

[node name="LanguageSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextSelect" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.10352e-05
margin_top = -240.0
margin_right = 6.10352e-05
margin_bottom = -240.0

[node name="Label" type="Label" parent="TextSelect"]
margin_left = -200.0
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Text language"
align = 1
valign = 1

[node name="en" type="Button" parent="TextSelect"]
margin_left = -200.0
margin_top = 100.0
margin_right = -30.0
margin_bottom = 160.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "English"
flat = true

[node name="ru" type="Button" parent="TextSelect"]
margin_left = 30.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 160.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 7 )
text = "Русский"
flat = true

[node name="Control" type="Control" parent="TextSelect"]
margin_left = -200.0
margin_top = 100.0
margin_right = -30.0
margin_bottom = 160.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TextSelect/Control"]
margin_left = -10.0
margin_top = -10.0
margin_right = 180.0
margin_bottom = 70.0
mouse_filter = 2
color = Color( 1, 0.92549, 0.811765, 0.431373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoiceSelect" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.10352e-05
margin_top = -40.0
margin_right = 6.10352e-05
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VoiceSelect"]
margin_left = -200.0
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Voice Language"
align = 1
valign = 1

[node name="ru" type="Button" parent="VoiceSelect"]
margin_left = -200.0
margin_top = 100.0
margin_right = -30.0
margin_bottom = 160.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 7 )
text = "Русский"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="none" type="Button" parent="VoiceSelect"]
margin_left = 30.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 161.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "X"
flat = true

[node name="Control" type="Control" parent="VoiceSelect"]
margin_left = -200.0
margin_top = 100.0
margin_right = -30.0
margin_bottom = 160.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VoiceSelect/Control"]
margin_left = -10.0
margin_top = -10.0
margin_right = 180.0
margin_bottom = 70.0
mouse_filter = 2
color = Color( 1, 0.92549, 0.811765, 0.431373 )

[node name="PlayButton" type="Button" parent="."]
margin_left = 760.0
margin_top = 800.0
margin_right = 1160.0
margin_bottom = 880.0
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = SubResource( 25 )
custom_styles/focus = SubResource( 26 )
custom_styles/disabled = SubResource( 27 )
custom_styles/normal = SubResource( 28 )
custom_fonts/font = SubResource( 29 )
text = "PLAY"
flat = true
[connection signal="pressed" from="TextSelect/en" to="." method="_on_TextLang_selected" binds= [ "en" ]]
[connection signal="pressed" from="TextSelect/ru" to="." method="_on_TextLang_selected" binds= [ "ru" ]]
[connection signal="pressed" from="VoiceSelect/ru" to="." method="_on_VoiceLang_selected" binds= [ "ru" ]]
[connection signal="pressed" from="VoiceSelect/none" to="." method="_on_VoiceLang_selected" binds= [ "none" ]]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
